# tauri-nextjs-template

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/app/api/ocr/: route.ts
src/app/home/: page.tsx
src/app/map-annotation/: page.tsx
src/app/test-coordinate-extraction/: page.tsx
src/styles/: globals.css
